<?xml version="1.0"?>
<package>
  <name>linefollower</name>
  <version>0.0.0</version>
  <description>The linefollower package</description>
  <maintainer email="gerlof.fokkema@gmail.com">gerlof</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
